force-app/main/default/objects/OCLQS_Transaction_Error__c/OCLQS_Transaction_Error__c.object-meta.xml
<CustomObject>
    <description>Error Logging Objects
Build By Integration Team</description>
    <label>Integration Error</label>
    <nameField>
        <displayFormat>Error-{000000}</displayFormat>
        <label>Transaction Error</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>