force-app/main/default/objects/OCLQS_Transaction_Error__c/fields/Error_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Error_Line_Number__c</fullName>
    <label>Error Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>