force-app/main/default/objects/OCLQS_Transaction_Error__c/fields/Error_Subject__c.field-meta.xml
<CustomField>
    <fullName>Error_Subject__c</fullName>
    <label>Error Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>