force-app/main/default/objects/OCLQS_Transaction_Error__c/fields/Transaction_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Parent_Id__c</fullName>
    <label>Transaction Parent Id</label>
    <referenceTo>OCLQS_Transaction_Log__c</referenceTo>
    <relationshipLabel>Integration Errors</relationshipLabel>
    <relationshipName>Int_rel_PIntLog_CIntLog</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>